# cpp-music

./: .envrc_example  .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  conanfile.py  configure.sh  layout.ini
.github/workflows/: cmake.yml
include/: ReceiverArray.h
include/cppmusic/: ReceiverArray.h
include/music/: ReceiverArray.h
src/: ReceiverArray.cpp
tests/: ReceiverArray_tests.cpp
tests/data/: linear_2d_geometry_300Hz_steering_vectors.json
